# Tachyon

./: .gitignore  Cargo.toml  Dockerfile.fuzz  LICENSE  README.md  SECURITY.md  deny.toml  llms.txt
.github/workflows/: c_reference_cross_platform.yml  ci.yml
.tachyon-rag/: config.py  indexer.py  mcp_server.py  requirements.txt  setup.sh  test_query.py
algorithms/tachyon/: ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md  VECTORS.md
algorithms/tachyon-zero/: Cargo.toml  README.md
algorithms/tachyon-zero/src/: avx512.rs  constants.rs  lib.rs
algorithms/tachyon/c-reference/: Makefile  main.c
algorithms/tachyon/examples/: generate_test_vectors.rs  simple.rs  visual_randomness.rs
algorithms/tachyon/fuzz/: Cargo.toml
algorithms/tachyon/fuzz/fuzz_targets/: fuzz_security.rs  fuzz_streaming.rs
algorithms/tachyon/src/: ffi.rs  lib.rs  oneshot.rs  streaming.rs  types.rs
algorithms/tachyon/src/engine/: dispatcher.rs  mod.rs  parallel.rs
algorithms/tachyon/src/kernels/: constants.rs  mod.rs
algorithms/tachyon/src/kernels/aesni/: compress.rs  finalize.rs  mod.rs  short.rs  state.rs
algorithms/tachyon/src/kernels/avx512/: compress.rs  finalize.rs  mod.rs  state.rs
algorithms/tachyon/src/kernels/portable/: mod.rs  utils.rs
algorithms/tachyon/tests/: bindings.rs  c_reference_cross_arch.rs  consistency.rs  cross_arch.rs  digest_trait.rs  domain_separation.rs  fuzz.rs  integration.rs  security.rs  seeding.rs  test_vectors.json  vectors.rs
algorithms/tachyon/tests/c/: main.c  test_wrapper.c
algorithms/tachyon/tests/fuzz/: parallel.rs  security.rs  streaming.rs  verification.rs
algorithms/tachyon/tests/go/: go.mod  main.go
algorithms/tachyon/tests/java/: Test.java
algorithms/tachyon/tests/node/: test.js
algorithms/tachyon/tests/python/: test.py
benches/: Cargo.toml
benches/benches/: backend_compare.rs  bench_bpc.rs  throughput.rs
bindings/c/: tachyon.h
bindings/go/: go.mod  tachyon.go  tachyon_test.go
bindings/java/: Cargo.toml  TestDomainSeparation.java
bindings/java/com/tachyon/: Tachyon.java
bindings/java/src/: lib.rs
bindings/node/: Cargo.toml  package.json  test_domain.js
bindings/node/src/: lib.rs
bindings/python/: test_domain_separation.py
bindings/python/tachyon/: __init__.py  tachyon.py
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: check.rs  hash.rs  mod.rs
scripts/: generate_constants.py
verification/: Cargo.toml  setup_testing.sh  tachyon_stream.rs
verification/.results/: bigcrush_result_cyclic_tachyon_v.0.1_rust.txt  practrand_result_cyclic_tachyon_v.0.1_rust.txt  smhasher_result_tachyon_v.0.1_c.txt  smhasher_result_tachyon_v.0.1_rust.txt
verification/practrand_kit/: test_practrand.sh
verification/smhasher_kit/: Tachyon_glue.cpp  sync_c.sh  sync_rust.sh  tachyon.h
verification/testu01_kit/: run_bigcrush.sh  testu01_stdin.c
