# =============================================================================
# TACHYON WORKSPACE
# =============================================================================

[workspace]
resolver = "2"
members = [
    "algorithms/tachyon",
    "algorithms/tachyon-zero",
    "cli",
    "bindings/node",
    "bindings/java",
    "benches",
    "verification",
]

# =============================================================================
# PROFILES
# =============================================================================

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = true

# =============================================================================
# LINT CONFIGURATION
# =============================================================================

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
