
# =============================================================================
# PACKAGE METADATA
# =============================================================================

[package]
name = "tachyon-benchmarks"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["byt3forg3 <260008633+byt3forg3@users.noreply.github.com>"]
repository = "https://github.com/byt3forg3/tachyon"
license = "MIT OR Apache-2.0"
publish = false

# =============================================================================
# FEATURES
# =============================================================================

[features]
default = ["multithread"]
multithread = []

# =============================================================================
# DEPENDENCIES
# =============================================================================

[dependencies]
tachyon = { path = "../algorithms/tachyon" }
tachyon-zero = { path = "../algorithms/tachyon-zero" }
criterion = "0.8"
blake3 = { version = "1.8", features = ["rayon"] }
sha2 = "0.10"
gxhash = "3.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.10"
hex = "0.4"
num_cpus = "1.16"
rayon = "1.10"

# =============================================================================
# LIBRARIES & BINARIES
# =============================================================================

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "backend_compare"
harness = false

[[bench]]
name = "bench_bpc"
harness = false
