
# =============================================================================
# PACKAGE METADATA
# =============================================================================

[package]
name = "tachyon-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["byt3forg3 <260008633+byt3forg3@users.noreply.github.com>"]
repository = "https://github.com/byt3forg3/tachyon"
description = "Command-line tool for the Tachyon hash family"
license = "MIT OR Apache-2.0"

# =============================================================================
# LIBRARIES & BINARIES
# =============================================================================

[[bin]]
name = "tachyon"
path = "src/main.rs"

# =============================================================================
# DEPENDENCIES
# =============================================================================

[dependencies]
tachyon = { path = "../algorithms/tachyon", features = ["multithread"] }
tachyon-zero = { path = "../algorithms/tachyon-zero" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
rayon = "1.10"
