
# =============================================================================
# PACKAGE METADATA
# =============================================================================

[package]
name = "tachyon-java"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["byt3forg3 <260008633+byt3forg3@users.noreply.github.com>"]
repository = "https://github.com/byt3forg3/tachyon"
license = "MIT OR Apache-2.0"

# =============================================================================
# LIBRARIES & BINARIES
# =============================================================================

[lib]
crate-type = ["cdylib"]

# =============================================================================
# DEPENDENCIES
# =============================================================================

[dependencies]
jni = "0.21"
tachyon = { path = "../../algorithms/tachyon" }
