
# =============================================================================
# PACKAGE METADATA
# =============================================================================

[package]
name = "tachyon-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["byt3forg3 <260008633+byt3forg3@users.noreply.github.com>"]
repository = "https://github.com/byt3forg3/tachyon"
license = "MIT OR Apache-2.0"

# =============================================================================
# LIBRARIES & BINARIES
# =============================================================================

[lib]
crate-type = ["cdylib"]

# =============================================================================
# DEPENDENCIES
# =============================================================================

[dependencies]
napi = { version = "3", features = ["default", "napi6"] }
napi-derive = "3"
tachyon = { path = "../../algorithms/tachyon" }
