# =============================================================================
# PACKAGE METADATA
# =============================================================================

[package]
name = "tachyon-fuzz"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["byt3forg3 <260008633+byt3forg3@users.noreply.github.com>"]
repository = "https://github.com/byt3forg3/tachyon"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

# =============================================================================
# DEPENDENCIES
# =============================================================================

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tachyon]
path = ".."

# =============================================================================
# WORKSPACE
# =============================================================================

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

# =============================================================================
# BINARIES
# =============================================================================

[[bin]]
name = "fuzz_security"
path = "fuzz_targets/fuzz_security.rs"
test = false
doc = false

[[bin]]
name = "fuzz_streaming"
path = "fuzz_targets/fuzz_streaming.rs"
test = false
doc = false
